<resources>
    <string name="app_name">crypto</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="are_you_sure_exit">Вы уверены, что хотите выйти?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <string name="home">личный кабинет</string>
    <string name="courses">курсы</string>
    <string name="profile">профиль</string>
    <string name="downloaded">скачанное</string>
    <string name="favorite">избранное</string>
    <string name="search">поиск</string>
    <string name="books">книги</string>
    <string name="contacts">контакты</string>

    <string name="contacts_text">Это приложение с курсами,\nлекциями, книгами и подкастами,\n<u>И это бесплатно!</u></string>
    <string name="contacts_pay">По вопросам оплаты:</string>
    <string name="contacts_pay_number">+7 800 555 35 35</string>
    <string name="contacts_ad">По вопросам рекламы:</string>
    <string name="contacts_ad_number">+7 800 555 35 35</string>
    <string name="contacts_suggestions">С предложениями:</string>
    <string name="contacts_suggestions_email">help_crypto@gmail.com</string>
    <string name="project">проект </string>

    <string name="my_courses">мои курсы</string>
    <string name="currency">валюта</string>

    <string name="you_earned">Вы заработали:</string>
    <string name="courses_description">так вы сможете сохранять курсы, идти\nпо собственной программе</string>
    <string name="login_or_register">Войдите или зарегистрируйтесь</string>
    <string name="login_or_register_description">так вы сможете сохранять курсы, идти\nпо собственной программе</string>
    <string name="login">вход</string>
    <string name="register">регистрация</string>


</resources>