<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    android:layout_marginTop="40dp"
    
    >
    <group android:checkableBehavior="single"
        android:fontFamily="@font/suisseintl"
        android:textStyle="bold"

        >
    <item
        android:id="@+id/home_navigation_item"
        android:title="@string/home"


        />
    <item
        android:id="@+id/courses_navigation_item"
        android:title="@string/courses"
        />
        <item
            android:id="@+id/profile_navigation_item"
            android:title="@string/profile"
            />
        <item
            android:id="@+id/downloaded_navigation_item"
            android:title="@string/dowloaded"
            /><item
        android:id="@+id/favorite_navigation_item"
        android:title="@string/favorite"
        /><item
        android:id="@+id/search_navigation_item"
        android:title="@string/search"
        /><item
        android:id="@+id/books_navigation_item"
        android:title="@string/books"
        /><item
        android:id="@+id/contacts_navigation_item"
        android:title="@string/contacts"
        />

    </group>
</menu>