<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoursesChildNotLoggedFragment">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:src="@drawable/my_courses_not_logged"
            android:layout_gravity="center_horizontal"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_or_register"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:fontFamily="@font/suisseintl"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/courses_description"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:fontFamily="@font/suisseintl"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="167dp"
                android:layout_height="52dp"
                android:textColor="@color/grey"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:fontFamily="@font/suisseintl"
                android:background="@drawable/chosen_button"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginLeft="20dp"
                android:layout_width="167dp"
                android:layout_height="52dp"
                android:textAllCaps="false"
                android:textColor="@color/grey"
                android:text="@string/register"
                android:textSize="16sp"
                android:fontFamily="@font/suisseintl"
                android:background="@drawable/chosen_button"/>
            
        </LinearLayout>
            
    </LinearLayout>

</FrameLayout>