<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactsFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="70dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/logo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/suisseintl"
        android:text="crypto educational"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        android:textColor="@color/black"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:background="@color/grey"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/suisseintl"
            android:text="@string/contacts_text"
            android:textSize="18sp"
            android:clickable="true"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:clickable="true"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/vk_icon"
                android:id="@+id/vkontakte_contact" />
            <de.hdodenhof.circleimageview.CircleImageView
                android:clickable="true"
                android:layout_marginLeft="10dp"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/inst_icon"
                android:id="@+id/instagram_contact" />
            <de.hdodenhof.circleimageview.CircleImageView
                android:clickable="true"
                android:layout_marginLeft="10dp"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/facebook_icon"
                android:id="@+id/facebook_contact" />
            <de.hdodenhof.circleimageview.CircleImageView
                android:clickable="true"
                android:layout_marginLeft="10dp"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/telegram_icon"
                android:id="@+id/telegram_contact" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:fontFamily="@font/suisseintl"
        android:textSize="16sp"
        android:text="@string/contacts_pay"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:fontFamily="@font/suisseintl"
            android:textSize="16sp"
            android:text="@string/contacts_pay_number"
            android:textColor="@color/black"
            android:textIsSelectable="true"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:fontFamily="@font/suisseintl"
            android:textSize="16sp"
            android:text="@string/contacts_ad"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:fontFamily="@font/suisseintl"
            android:textSize="16sp"
            android:text="@string/contacts_ad_number"
            android:textColor="@color/black"
            android:textIsSelectable="true"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:fontFamily="@font/suisseintl"
            android:textSize="16sp"
            android:text="@string/contacts_suggestions"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:fontFamily="@font/suisseintl"
            android:textSize="16sp"
            android:text="@string/contacts_suggestions_email"
            android:textColor="@color/black"
            android:textIsSelectable="true"
            android:layout_gravity="center_horizontal"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:fontFamily="@font/suisseintl"
                android:text="@string/project"/>
            <TextView
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/main"
                android:fontFamily="@font/suisseintl"
                android:text="dandelion company"/>
        </androidx.appcompat.widget.LinearLayoutCompat>


    </LinearLayout>
</FrameLayout>